--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Cyber ELearning</title>
+    <title>Cyber E-Learning</title>
 
     <!-- FontAwesome 6.2.0 CSS -->
     <link
